@@ -1,3 +1,10 @@
+2008-06-28  Andrew John Hughes  <gnu_andrew@member.fsf.org>
+
+	* configure.ac: Remove ASM detection.
+	* Makefile.am: Make disabling GNU bytecode library
+	work by not building javah and javap when this isn't
+	available.
+	
 2006-09-22  Thomas Fitzsimmons  <fitzsim@redhat.com>
 
 	* bin/rmic: Remove file.
